--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ select {
 /* Set root */
 
 :root {
-  --color-theme: rgb(0, 0, 128);
+  --color-theme: rgb(0, 0, 255);
   --color-ligt: white;
   --color-bg: rgb(247, 247, 247);
   --color-btn: rgb(0, 0, 128);
@@ -47,33 +47,72 @@ select {
   margin: 1rem;
 }
 
+h1 {
+  display: flex;
+  justify-content: center;
+}
+
+main h2 {
+  margin: 1.5rem;
+  padding-top: 1rem;
+}
+
+.sidebar h2 {
+  margin: 0rem auto 0rem auto;
+}
+
+button {
+  background-color: var(--color-navbar);
+  color: var(--color-ligt);
+  border-radius: 10px;
+  border: none;
+  padding: 0.2rem;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: var(--color-theme);
+}
+
 /* Setup dashboard page */
 
 .wrapper {
   margin-top: 1.5rem;
   display: grid;
   gap: 1rem;
-  grid-template-columns: 20% 1fr;
-}
-
-.sidebar {
-  background-color: rgb(185, 240, 240);
-  border-style: solid;
-  border-width: 0.1rem;
-  border-color: #333;
-  max-height: 600px;
+  grid-template-columns: auto 1fr;
 }
 
 .flex-filter {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  background-color: var(--color-ligt);
+  border-radius: 10px;
+  box-shadow: 2px 6px 6px 0px #7f827b;
+  height: fit-content;
+  padding: 1rem;
+  margin-top: 1.5rem;
+  min-width: 145px;
 }
 
 .filter-name {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
+}
+
+.profiel-name {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: space-between;
+}
+
+.profielicon {
+  height: 1.5rem;
 }
 
 .filter-item {
@@ -84,7 +123,36 @@ select {
   margin-left: 1rem;
 }
 
+.profilebox {
+  display: flex;
+  flex-direction: column;
+  gap: 0.4rem;
+}
+
+/* Setup lay-out chart */
+
+.chart-container {
+  position: relative;
+  margin: auto;
+  height: 70vh;
+  background-color: var(--color-ligt);
+  border-radius: 10px;
+  box-shadow: 2px 6px 6px 0px #7f827b;
+}
+
 /* Setup lay-out Table */
+
+.table-container {
+  background-color: var(--color-ligt);
+  border-radius: 10px;
+  box-shadow: 2px 6px 6px 0px #7f827b;
+  padding-bottom: 0.1rem;
+  height: fit-content;
+}
+
+.table_content_container {
+  margin: 1rem;
+}
 
 table {
   width: 100%;
@@ -98,11 +166,15 @@ table {
 }
 
 .header__item {
-  padding: 0.15rem;
+  padding: 0.5rem;
   gap: 1rem;
 }
 
 .item__list {
-  background-color: var(--color-ligt);
+  padding: 0.5rem;
+  background-color: var(--color-bg);
+}
+
+.item {
   padding: 0.5rem;
 }
