--- a/src/index.css
+++ b/src/index.css
@@ -75,6 +75,10 @@ button:hover {
   background-color: var(--color-theme);
 }
 
+.icon {
+  height: 1.5rem;
+}
+
 /* Setup dashboard page */
 
 .wrapper {
@@ -109,10 +113,6 @@ button:hover {
   flex-wrap: wrap;
   gap: 1rem;
   justify-content: space-between;
-}
-
-.profielicon {
-  height: 1.5rem;
 }
 
 .filter-item {
@@ -177,4 +177,37 @@ table {
 
 .item {
   padding: 0.5rem;
+}
+
+/* Setup Profile page */
+
+.student {
+  display: flex;
+  gap: 1rem;
+}
+
+.back-to-home {
+  display: flex;
+  gap: 1rem;
+  align-items: center;
+}
+
+.student h1 {
+  margin: auto;
+}
+
+.studentProfile {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.studentProfile img {
+  height: 12rem;
+  width: 12rem;
+  margin: auto;
+}
+
+.studentProfile p {
+  font-weight: bold;
 }
